--- a/BlogPeliculas/BlogPeliculas.API/appsettings.json
+++ b/BlogPeliculas/BlogPeliculas.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogPeliculasContext": "Data Source=.\\blogpeliculas.db"
+  }
 }
