--- a/BlogPeliculas/BlogPeliculas.WebMVC/BlogPeliculas.WebMVC.csproj
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/BlogPeliculas.WebMVC.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Peliculas\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
   </ItemGroup>
 
 </Project>
