--- a/BlogPeliculas/BlogPeliculas.WebMVC/appsettings.json
+++ b/BlogPeliculas/BlogPeliculas.WebMVC/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:7093/api"
+  "ApiUrl.Dev": "https://localhost:7093/api",
+  "ApiUrl": "https://sqliteazurepelicula.azurewebsites.net/api"
 }
